--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
         <ul class="nav nav-tabs services">
           <li>
             <a href="#service1" data-toggle="tab">
-              <img src = "images/team/petri.jpeg" class="img-circle" align="middle" width="100%">
+              <img src = "images/team/Marianne_Stroehmann-021-Ret.jpg" class="img-circle" align="middle" width="100%">
             </a>            
           </li>
           <li class="animated hiding" data-animation="flipInX" data-delay="500">
@@ -554,10 +554,8 @@
         </ul>
         <div class="tab-content animated hiding" id="service-detail" data-animation="fadeInUp">
   <div class="tab-pane fade in active" id="service1"> 
-            <h3>Petri Kokko</h3>
-            <p>Director, Agency<br />
-			Mob: +49 (162) 2122726<br />
-			<a href="mailto:petri@google.com">petri@google.com</a></p>
+            <h3>Marianne Stroehmann</h3>
+            <p>Country Sales Director<br />
           </div>
         <div class="tab-pane fade" id="service2">
             <h3>Melania van Hümmel</h3>
