--- a/index.html
+++ b/index.html
@@ -186,14 +186,14 @@
         	<!--<li class="year">Di.</li> -->
            <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
-            <h4>Keynote: Measurement and Attribution - Why?</h4>
-            <p>tbd </p>
+            <h4>Keynote: Attribution, Analytics and Automation - Why?</h4>
+            <p>Oliver Born </p>
             <span class="date"> <b>10:45 – 11:30</b> | Attribution, Analytics & Automation – Why?  </span>
           </div>
         </li>
            <li class="animated hiding" data-animation="fadeInLeft">
           <div class="timeline-panel left">
-            <h4>Kundencase</h4>
+            <h4>Customer Case</h4>
             <p>tbd</p>
             <span class="date">Customer Case – to be defined | <b>11:30 - 12:15</b></span>
           </div>
@@ -208,7 +208,7 @@
             <li class="animated hiding" data-animation="fadeInLeft">
           <div class="timeline-panel left">
             <h4>Breakout</h4>
-            <p>Christoph Roscheck & Arne Laudien</p>
+            <p>tbd</p>
             <span class="date">Basics of customer-centric measurement: Fundamentals, Benefits & Data Privacy | <b>13:15 - 14:00</b></span>
           </div>
         </li>
@@ -229,7 +229,7 @@
             <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
             <h4>Breakout</h4>
-            <p>Livia von Mitschke-Collande</p>
+            <p>Dirk Bruns</p>
             <span class="date"><b>14:00 - 14:45</b> | YouTube for Performance & Measurement Best Practices</span>
           </div>
         </li>
@@ -250,7 +250,7 @@
            <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
             <h4>Breakout </h4>
-            <p>Denis Dautaj & Reemda Tieben</p>
+            <p>Denis Dautaj</p>
             <span class="date"><b>15:15 - 16:00 </b>| Automation by Google: AdWords Smart Bidding & DoubleClick Bid Strategies</span>
           </div>
         </li>
