--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
   <section id="about">
     <div class="container">
       <div class="picture">
-        <img src="images/team/Marianne_Stroehmann-021-Ret.jpg" width="500%" class="img-circle">
+        <img src="images/team/Marianne_Stroehmann.jpg" width="100%" class="img-circle">
       </div>
       <div class="title">
         <h1>Willkommen!</h1>
@@ -523,12 +523,12 @@
         <ul class="nav nav-tabs services">
           <li>
             <a href="#service1" data-toggle="tab">
-              <img src = "images/team/Marianne_Stroehmann-021-Ret.jpg" class="img-circle" align="middle" width="100%">
+              <img src = "images/team/Marianne_Stroehmann.jpg" class="img-circle" align="middle" width="100%">
             </a>            
           </li>
           <li class="animated hiding" data-animation="flipInX" data-delay="500">
             <a href="#service2" data-toggle="tab">
-              <img src = "images/team/melaniavanh.png" class="img-circle" align="middle" width="100%">
+              <img src = "images/team/Reemda Tieben.jpg" class="img-circle" align="middle" width="100%">
             </a>            
           </li>
           <li class="animated hiding" data-animation="flipInX" data-delay="1000">
