--- a/index.html
+++ b/index.html
@@ -558,10 +558,8 @@
             <p>Country Sales Director<br />
           </div>
         <div class="tab-pane fade" id="service2">
-            <h3>Melania van Hümmel</h3>
-            <p>Head of Agency<br />
-			Mob: +49 15229401936<br />
-			<a href="mailto:melaniavanh@google.com">melaniavanh@google.com</a></p>
+            <h3>Dr. Reemda Tieben</h3>
+            <p>Measurement & Attribution Consultant <br />
           </div>
           <div class="tab-pane fade" id="service3">
             <h3>Joerg Berlage</h3>
