--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
           </li>
           <li class="animated hiding" data-animation="flipInX" data-delay="500">
             <a href="#service2" data-toggle="tab">
-              <img src = "images/team/Reemda Tieben.jpg" class="img-circle" align="middle" width="100%">
+              <img src = "images/team/ReemdaTieben.jpg" class="img-circle" align="middle" width="100%">
             </a>            
           </li>
           <li class="animated hiding" data-animation="flipInX" data-delay="1000">
