--- a/index.html
+++ b/index.html
@@ -562,10 +562,8 @@
             <p>Measurement & Attribution Consultant <br />
           </div>
           <div class="tab-pane fade" id="service3">
-            <h3>Joerg Berlage</h3>
-            <p>Head of Platforms Sales Independent Agencies<br />	
-			Mob: +49 1736328868<br />
-			<a href="mailto:joerg@google.com">joerg@google.com</a></p>
+            <h3>Oliver Borm</h3>
+            <p>Advanced Performance Lead<br />	
           </div>
           <div class="tab-pane fade" id="service4">
             <h3>Michael Hartwig</h3>
