--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
            <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
             <h4>Keynote: Attribution, Analytics and Automation - Why?</h4>
-            <p>Oliver Born </p>
+            <p>Oliver Borm </p>
             <span class="date"> <b>10:45 – 11:30</b> | Attribution, Analytics & Automation – Why?  </span>
           </div>
         </li>
@@ -533,24 +533,35 @@
           </li>
           <li class="animated hiding" data-animation="flipInX" data-delay="1000">
             <a href="#service3" data-toggle="tab">
-              <img src = "images/team/joerg.jpeg" class="img-circle" align="middle" width="100%">
+              <img src = "images/team/OliverBorm.jpeg" class="img-circle" align="middle" width="100%">
             </a>            
           </li>
           <li class="animated hiding" data-animation="flipInX" data-delay="1500">
             <a href="#service4" data-toggle="tab">
-              <img src = "images/team/mhartwig.jpeg" class="img-circle" align="middle" width="100%">
+              <img src = "images/team/MiriamTappe.jpeg" class="img-circle" align="middle" width="100%">
             </a>            
           </li>
 	<li class="animated hiding" data-animation="flipInX" data-delay="2000">
             <a href="#service5" data-toggle="tab">
-              <img src = "images/team/hyeuon.jpeg" class="img-circle" align="middle" width="100%">
+              <img src = "images/team/JanWittek.jpeg" class="img-circle" align="middle" width="100%">
             </a>            
           </li>
 		<li class="animated hiding" data-animation="flipInX" data-delay="2500">
             <a href="#service6" data-toggle="tab">
-              <img src = "images/team/kbuschmann.jpeg" class="img-circle" align="middle" width="100%">
+              <img src = "images/team/DirkBruns.jpeg" class="img-circle" align="middle" width="100%">
             </a>            
           </li>
+		<li class="animated hiding" data-animation="flipInX" data-delay="2500">
+            <a href="#service6" data-toggle="tab">
+              <img src = "images/team/MartinLoss.jpeg" class="img-circle" align="middle" width="100%">
+            </a>            
+          </li>
+		<li class="animated hiding" data-animation="flipInX" data-delay="2500">
+            <a href="#service6" data-toggle="tab">
+              <img src = "images/team/DennisDautaj.jpeg" class="img-circle" align="middle" width="100%">
+            </a>            
+          </li>
+		
         </ul>
         <div class="tab-content animated hiding" id="service-detail" data-animation="fadeInUp">
   <div class="tab-pane fade in active" id="service1"> 
@@ -566,20 +577,24 @@
             <p>Advanced Performance Lead<br />	
           </div>
           <div class="tab-pane fade" id="service4">
-            <h3>Michael Hartwig</h3>
-            <p>Director of Media Buying Solutions<br />
-			<a href="mailto:mhartwig@google.com">mhartwig@google.com</a></p>
-		</div>  
+            <h3>Miriam Tappe</h3>
+            <p>Solution Specialist Automation & Attribution<br />
+					</div>  
 	<div class="tab-pane fade" id="service5">
-            <h3>Hye Uon Fayolle</h3>
-            <p>Head of Agency<br />	
-			<a href="mailto:hyeuon@google.com">hyeuon@google.com</a></p>
-		</div> 
+            <h3>Jan Wittek</h3>
+            <p>Head of Google Analytics 360 Sales, DACH & CEE<br />	
+					</div> 
 			  <div class="tab-pane fade" id="service6">
-            <h3>Kathrin Buschmann</h3>
-            <p>Agency Sales Manager<br />	
-			Mob: +49 (172) 9406340<br />
-			<a href="mailto:kbuschmann@google.com">kbuschmann@google.com</a></p>
+            <h3>Dirk Bruns</h3>
+            <p>Head of Branding Solutions<br />	
+          </div>
+		 <div class="tab-pane fade" id="service7">
+            <h3>Dirk Bruns</h3>
+            <p>Head of Branding Solutions<br />	
+          </div>
+		 <div class="tab-pane fade" id="service8">
+            <h3>Dirk Bruns</h3>
+            <p>Head of Branding Solutions<br />	
           </div>
           </div>
         </div>
