--- a/index.html
+++ b/index.html
@@ -533,32 +533,32 @@
           </li>
           <li class="animated hiding" data-animation="flipInX" data-delay="1000">
             <a href="#service3" data-toggle="tab">
-              <img src = "images/team/OliverBorm.jpeg" class="img-circle" align="middle" width="100%">
+              <img src = "images/team/OliverBorm.jpg" class="img-circle" align="middle" width="100%">
             </a>            
           </li>
           <li class="animated hiding" data-animation="flipInX" data-delay="1500">
             <a href="#service4" data-toggle="tab">
-              <img src = "images/team/MiriamTappe.jpeg" class="img-circle" align="middle" width="100%">
+              <img src = "images/team/MiriamTappe.jpg" class="img-circle" align="middle" width="100%">
             </a>            
           </li>
 	<li class="animated hiding" data-animation="flipInX" data-delay="2000">
             <a href="#service5" data-toggle="tab">
-              <img src = "images/team/JanWittek.jpeg" class="img-circle" align="middle" width="100%">
+              <img src = "images/team/JanWittek.jpg" class="img-circle" align="middle" width="100%">
             </a>            
           </li>
 		<li class="animated hiding" data-animation="flipInX" data-delay="2500">
             <a href="#service6" data-toggle="tab">
-              <img src = "images/team/DirkBruns.jpeg" class="img-circle" align="middle" width="100%">
+              <img src = "images/team/DirkBruns.jpg" class="img-circle" align="middle" width="100%">
             </a>            
           </li>
 		<li class="animated hiding" data-animation="flipInX" data-delay="2500">
             <a href="#service6" data-toggle="tab">
-              <img src = "images/team/MartinLoss.jpeg" class="img-circle" align="middle" width="100%">
+              <img src = "images/team/MartinLoss.jpg" class="img-circle" align="middle" width="100%">
             </a>            
           </li>
 		<li class="animated hiding" data-animation="flipInX" data-delay="2500">
             <a href="#service6" data-toggle="tab">
-              <img src = "images/team/DennisDautaj.jpeg" class="img-circle" align="middle" width="100%">
+              <img src = "images/team/DennisDautaj.jpg" class="img-circle" align="middle" width="100%">
             </a>            
           </li>
 		
