--- a/index.html
+++ b/index.html
@@ -558,7 +558,7 @@
           </li>
 		<li class="animated hiding" data-animation="flipInX" data-delay="2500">
             <a href="#service6" data-toggle="tab">
-              <img src = "images/team/DennisDautaj.jpg" class="img-circle" align="middle" width="100%">
+              <img src = "images/team/DenisDautaj.jpg" class="img-circle" align="middle" width="100%">
             </a>            
           </li>
 		
@@ -589,12 +589,12 @@
             <p>Head of Branding Solutions<br />	
           </div>
 		 <div class="tab-pane fade" id="service7">
-            <h3>Dirk Bruns</h3>
-            <p>Head of Branding Solutions<br />	
+            <h3>Martin Loss</h3>
+            <p>Mobile Solutions Specialist<br />	
           </div>
 		 <div class="tab-pane fade" id="service8">
-            <h3>Dirk Bruns</h3>
-            <p>Head of Branding Solutions<br />	
+            <h3>Denis Dautaj</h3>
+            <p>Search Audience & Automation, Central Europe<br />	
           </div>
           </div>
         </div>
