--- a/index.html
+++ b/index.html
@@ -552,13 +552,13 @@
             </a>            
           </li>
 		<li class="animated hiding" data-animation="flipInX" data-delay="2500">
-            <a href="#service6" data-toggle="tab">
+            <a href="#service7" data-toggle="tab">
               <img src = "images/team/MartinLoss.jpg" class="img-circle" align="middle" width="100%">
             </a>            
           </li>
 		<li class="animated hiding" data-animation="flipInX" data-delay="2500">
-            <a href="#service6" data-toggle="tab">
-              <img src = "images/team/DenisDautaj.jpg" class="img-circle" align="middle" width="100%">
+            <a href="#service8" data-toggle="tab">
+              <img src = "images/team/DennisDautaj.jpg" class="img-circle" align="middle" width="100%">
             </a>            
           </li>
 		
