--- a/index.html
+++ b/index.html
@@ -385,7 +385,15 @@
       </div>
       <p>Das elegante Luxushotel liegt nahe der Einkaufsmeile Mönckebergstraße. Die Hamburger Kunsthalle ist 1 km und die St. Pauli Landungsbrücken im Hamburger Hafen sind 2,6 km entfernt.</p>
       <a href="https://www.google.de/maps/place/Park+Hyatt+Hamburg/@53.5508278,10.000941,17z/data=!3m1!4b1!4m5!3m4!1s0x47b18ee233757629:0xa4cd68e2b5bdf873!8m2!3d53.5508278!4d10.0031297" target="_blank" class="btn btn-custom">Map</a>
-    </div>
+      <div class="col-sm-5 col-sm-offset-2 col-md-12 col-md-offset-0">
+      <div class="title">  
+		<hr>
+	<h3>Scandic Hamburg Emporio</h3>
+      </div>
+      <p>Das moderne Hotel liegt nur 5 Gehminuten von der U-Bahn-Haltestelle Gänsemarkt, 9 Gehminuten vom Park Planten un Blomen und 1,7 km vom Miniatur Wunderland Hamburg.</p>
+      <a href="https://www.google.de/maps/place/Scandic+Hamburg+Emporio/@53.5559672,9.9798509,17z/data=!3m1!4b1!4m5!3m4!1s0x47b18f16548b63f9:0xe5ef4624b1da9007!8m2!3d53.5559672!4d9.9820396" target="_blank" class="btn btn-custom">Map</a>
+ 
+		</div>
   </section>
   <!-- End Call to action -->
   <!-- Works -->
