--- a/index.html
+++ b/index.html
@@ -399,7 +399,9 @@
       </div>
       <p>Dieses hochmoderne Hotel mit seitlicher Glasfront liegt 8 Gehminuten vom Bahnhof Dammtor und 1,2 km von der Hamburger Kunsthalle entfernt.</p>
       <a href="https://www.google.de/maps/place/SIDE+Design+Hotel+Hamburg+(A+member+of+Design+Hotels)/@53.5567217,9.9844123,17z/data=!3m1!4b1!4m5!3m4!1s0x47b18f17879dff33:0xade9e0c38b408a3d!8m2!3d53.5567217!4d9.986601" target="_blank" class="btn btn-custom">Map</a>
- 		</div>
+ 		<div class="col-sm-5 col-sm-offset-2 col-md-12 col-md-offset-0">
+      <div class="title">  
+	      </div>
   </section>
   <!-- End Call to action -->
   <!-- Works -->
