--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           <li class="active"><a href="#home">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#agenda">Agenda</a></li>
-          <li><a href="#contacts">Kontakte</a></li>
+          <li><a href="#contacts">Speaker</a></li>
         </ul>
       </div>
     </div>
@@ -107,7 +107,7 @@
                       </ul>
         </div>          
         <a href="#about" class="btn btn-custom">Jetzt Anmelden</a>
-        <a href="#contacts" class="btn btn-empty">Kontakte</a>
+        <a href="#contacts" class="btn btn-empty">Speaker</a>
       </div>
     </div>
   </div>
@@ -532,7 +532,7 @@
   <section id="contacts">
     <div class="container">
       <div class="title">
-        <h1>Kontakte</h1>
+        <h1>Speaker</h1>
         <hr>
       </div>
       <div class="col-md-10 col-md-offset-1" id="services-box">        
