--- a/index.html
+++ b/index.html
@@ -123,11 +123,12 @@
         <h1>Willkommen!</h1>
         <hr>
       </div>
-      <p class="about-text">Moin Moin. Im Januar erwartet Sie ein spannendes Event in unserem Hamburger Office zu den Themen <br><b>Attribution - Analytics - Automation</b>!
+      <p class="about-text">Im Januar erwartet Sie ein spannendes Event in unserem Hamburger Office zu den Themen <br><b>Attribution - Analytics - Automation</b>!
 	       <br>
 	      In diesem Event möchten wir Herausforderungen und Chancen neuer technischer Möglichkeiten des Marketings diskutieren: Weg vom Fokus nur auf den Kaufakt und auf die eigenen Marketingkanäle, hin zur Betrachtung Ihrer Kunden und ihrer ganzen Customer Journey. Wir möchten Ihnen in Breakout Sessions unterschiedliche Lösungen für das Management solch einer Customer Journey (Attribution) an die Hand geben. Mit Google Analytics 360, AdWords Attribution, Cross-Device, Brand Attribution und Online to Store Tools lässt sich die Customer Journey innerhalb eines Kanals, zwischen Kanälen, über Devices hinweg oder zwischen Online- und Offline Kanälen analysieren und managen. 
  <br>
-	      Der Fokus aller Sessions soll auf der Umsetzung dieser unterschiedlichen Lösungen im Unternehmen liegen: Nicht nur möchten wir mit einem Kundencase die organisatorischen Herausforderungen solcher Lösungen thematisieren, sondern auch eine automatisierte Umsetzung beispielsweise durch ein datengetriebene Attributionsmodell und Gebotsstrategien darstellen. </p>
+	      Der Fokus aller Sessions soll auf der Umsetzung dieser unterschiedlichen Lösungen im Unternehmen liegen: Nicht nur möchten wir mit einem Kundencase die organisatorischen Herausforderungen solcher Lösungen thematisieren, sondern auch eine automatisierte Umsetzung beispielsweise durch ein datengetriebene Attributionsmodell und Gebotsstrategien darstellen.
+	      <br> <i>Marianne Stroehmann, Country Sales Director </i></p>
       <div class="col-md-3 col-sm-6 col-xs-12">
         <article class="feature animated hiding" data-animation="bounceIn" data-delay="0">
           <!--<div class="heading-content">
