--- a/index.html
+++ b/index.html
@@ -106,8 +106,7 @@
             <!--Hello World-->
                       </ul>
         </div>          
-        <a href="#about" class="btn btn-custom">Jetzt Anmelden</a>
-        <a href="#contacts" class="btn btn-empty">Speaker</a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLScIEylZ3umoV6ioGyQk7RgotT7YUKcBwv8pETpbLYi2Aw9IXw/viewform" class="btn btn-custom">Jetzt Anmelden</a>
       </div>
     </div>
   </div>
