--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 	     <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel left">
             <h4>Welcome</h4>
-            <p>Marianne Stroehmann</p>
+            <p>Petri Kokko</p>
             <span class="date">From conversion to customer-centric Marketing | <b>10:30 – 10:45</b></span>
           </div>
         </li>
@@ -187,7 +187,7 @@
            <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
             <h4>Keynote: Attribution, Analytics and Automation - Why?</h4>
-            <p>Oliver Borm </p>
+            <p>Dominik Wöber </p>
             <span class="date"> <b>10:45 – 11:30</b> | Attribution, Analytics & Automation – Why?  </span>
           </div>
         </li>
@@ -207,23 +207,23 @@
         </li>
             <li class="animated hiding" data-animation="fadeInLeft">
           <div class="timeline-panel left">
-            <h4>Breakout</h4>
+            <h4>Session</h4>
             <p>tbd</p>
-            <span class="date">Basics of customer-centric measurement: Fundamentals, Benefits & Data Privacy | <b>13:15 - 14:00</b></span>
+            <span class="date">Measurement & Attribution projects - how to tackle it in different departments and with agencies | <b>13:15 - 14:00</b></span>
           </div>
         </li>
-              <li class="animated hiding" data-animation="fadeInLeft">
-          <div class="timeline-panel left">
+              <li class="animated hiding" data-animation="fadeInRight">
+          <div class="timeline-panel right">
             <h4>Breakout</h4>
-            <p>Miriam Tappe</p>
-            <span class="date">Measuring Customer Journey from Online to your Store | <b>13:15 - 14:00</b></span>
+            <p>Dirk Bruns</p>
+            <span class="date">YouTube for Performance & Measurement Best Practices | <b>14:00 - 14:45</b></span>
           </div>
         </li>
            <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
             <h4>Breakout</h4>
-            <p>Jan Wittek</p>
-            <span class="date"><b>14:00 - 14:45 | Google Analytics und Cross-Channel Attribution</b></span>
+            <p>Dr. Thomas Steiner</p>
+            <span class="date"><b>14:00 - 14:45 | AdWords Scripts</b></span>
           </div>
         </li>
             <li class="animated hiding" data-animation="fadeInRight">
