--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <!--Hello World-->
                       </ul>
         </div>          
-        <a href="https://docs.google.com/forms/d/e/1FAIpQLSe3voVDkFrbrPJvY0onl1rtpMNXcWNwzMXADocZYnnAB5QZQg/viewform">Jetzt Anmelden</a>
+        <a href="https://docs.google.com/forms/d/e/1FAIpQLSe3voVDkFrbrPJvY0onl1rtpMNXcWNwzMXADocZYnnAB5QZQg/viewform"class="btn btn-custom">Jetzt Anmelden</a>
       </div>
     </div>
   </div>
