--- a/index.html
+++ b/index.html
@@ -216,14 +216,14 @@
           <div class="timeline-panel right">
             <h4>Breakout</h4>
             <p>Dirk Bruns</p>
-            <span class="date">YouTube for Performance & Measurement Best Practices | <b>14:00 - 14:45</b></span>
+            <span class="date"><b>14:00 - 14:45 </b>| YouTube for Performance & Measurement Best Practices  </span>
           </div>
         </li>
            <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
             <h4>Breakout</h4>
             <p>Dr. Thomas Steiner</p>
-            <span class="date"><b>14:00 - 14:45 | AdWords Scripts</b></span>
+            <span class="date"><b>14:00 - 14:45 </b>| AdWords Scripts</span>
           </div>
         </li>
             <li class="animated hiding" data-animation="fadeInRight">
@@ -243,15 +243,15 @@
             <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
             <h4>Breakout</h4>
-            <p>Martin Loss</p>
-            <span class="date"><b> 15:15 - 16:00</b> | Mobile Measurement: AdWords Attribution incl. Cross-Device</span>
+            <p>Jan Wittek</p>
+            <span class="date"><b> 15:15 - 16:00</b> | Google Analytics und Cross-Channel Attribution (incl. How to become Reseller)</span>
           </div>
         </li>
            <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
             <h4>Breakout </h4>
-            <p>Denis Dautaj</p>
-            <span class="date"><b>15:15 - 16:00 </b>| Automation by Google: AdWords Smart Bidding & DoubleClick Bid Strategies</span>
+            <p>Miriam Tappe</p>
+            <span class="date"><b>15:15 - 16:00 </b>| Measuring Customer Journey from Online to your Store </span>
           </div>
         </li>
             
@@ -265,7 +265,7 @@
 	   <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
             <h4>Wrap Up</h4>
-            <p>Marianne Stroehmann</p>
+            <p>Petri Kokko</p>
 		  <span class="date"><b>16:45 - 17:00</b></span>
           </div>
         </li>
