--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@
             <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
             <h4>Breakout</h4>
-            <p>Dirk Bruns</p>
-            <span class="date"><b>14:00 - 14:45</b> | YouTube for Performance & Measurement Best Practices</span>
+            <p>Denis Dautaj</p>
+            <span class="date"><b>14:00 - 14:45</b> | Automation by Google: AdWords Smart Bidding & DoubleClick Bid Strategies</span>
           </div>
         </li>
             <li class="animated hiding" data-animation="fadeInLeft">
