--- a/index.html
+++ b/index.html
@@ -539,12 +539,12 @@
         <ul class="nav nav-tabs services">
           <li>
             <a href="#service1" data-toggle="tab">
-              <img src = "images/team/MarianneStroehmann.jpg" class="img-circle" align="middle" width="100%">
+              <img src = "images/team/PetriKokko.gif" class="img-circle" align="middle" width="100%">
             </a>            
           </li>
           <li class="animated hiding" data-animation="flipInX" data-delay="500">
             <a href="#service2" data-toggle="tab">
-              <img src = "images/team/ReemdaTieben.jpg" class="img-circle" align="middle" width="100%">
+              <img src = "images/team/DominikWoeber.jpg" class="img-circle" align="middle" width="100%">
             </a>            
           </li>
           <li class="animated hiding" data-animation="flipInX" data-delay="1000">
@@ -581,12 +581,12 @@
         </ul>
         <div class="tab-content animated hiding" id="service-detail" data-animation="fadeInUp">
   <div class="tab-pane fade in active" id="service1"> 
-            <h3>Marianne Stroehmann</h3>
-            <p>Country Sales Director<br />
+            <h3>Petri Kokko</h3>
+            <p>Director, Agency<br />
           </div>
         <div class="tab-pane fade" id="service2">
-            <h3>Dr. Reemda Tieben</h3>
-            <p>Measurement & Attribution Consultant <br />
+            <h3>Dominik Wöber</h3>
+            <p>Head of Performance Sales, Central Europe <br />
           </div>
           <div class="tab-pane fade" id="service3">
             <h3>Oliver Borm</h3>
