--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
           </li>
 		<li class="animated hiding" data-animation="flipInX" data-delay="2500">
             <a href="#service7" data-toggle="tab">
-              <img src = "images/team/MartinLoss.jpg" class="img-circle" align="middle" width="100%">
+              <img src = "images/team/TomSteiner.jpg" class="img-circle" align="middle" width="100%">
             </a>            
           </li>
 		<li class="animated hiding" data-animation="flipInX" data-delay="2500">
@@ -605,8 +605,8 @@
             <p>Head of Branding Solutions<br />	
           </div>
 		 <div class="tab-pane fade" id="service7">
-            <h3>Martin Loss</h3>
-            <p>Mobile Solutions Specialist<br />	
+            <h3>Dr. Thomas Steiner</h3>
+            <p>Customer Solutions Engineer<br />	
           </div>
 		 <div class="tab-pane fade" id="service8">
             <h3>Denis Dautaj</h3>
