--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
           </li>
 		<li class="animated hiding" data-animation="flipInX" data-delay="2500">
             <a href="#service7" data-toggle="tab">
-              <img src = "images/team/TomSteiner.jpg" class="img-circle" align="middle" width="100%">
+              <img src = "images/team/Tom Steiner.gif" class="img-circle" align="middle" width="100%">
             </a>            
           </li>
 		<li class="animated hiding" data-animation="flipInX" data-delay="2500">
