--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
           <div class="timeline-panel right">
             <h4>Breakout</h4>
             <p>Dr. Thomas Steiner</p>
-            <span class="date"><b>14:00 - 14:45 </b>| AdWords Scripts</span>
+            <span class="date"><b>14:00 - 14:45 </b>| Automation by Google: Automate your AdWords campaign with AdWords Scripts</span>
           </div>
         </li>
             <li class="animated hiding" data-animation="fadeInRight">
