--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
         	<!--<li class="year">Di.</li> -->
            <li class="animated hiding" data-animation="fadeInRight">
           <div class="timeline-panel right">
-            <h4>Keynote: Attribution, Analytics and Automation - Why?</h4>
+            <h4>Keynote</h4>
             <p>Dominik Wöber </p>
             <span class="date"> <b>10:45 – 11:30</b> | Attribution, Analytics & Automation – Why?  </span>
           </div>
@@ -209,7 +209,7 @@
           <div class="timeline-panel left">
             <h4>Session</h4>
             <p>tbd</p>
-            <span class="date">Measurement & Attribution projects - how to tackle it in different departments and with agencies | <b>13:15 - 14:00</b></span>
+            <span class="date">Measurement & Attribution projects - how to tackle in different departments and with agencies | <b>13:15 - 14:00</b></span>
           </div>
         </li>
               <li class="animated hiding" data-animation="fadeInRight">
@@ -257,7 +257,7 @@
             
             <li class="animated hiding" data-animation="fadeInLeft">
           <div class="timeline-panel left">
-            <h4>Keynote: Future of Attribution</h4>
+            <h4>Keynote</h4>
             <p>tbd</p>
             <span class="date">The Future of Attribution | <b>16:00 - 16:45</b></span>
           </div>
