--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
           <div class="timeline-panel right">
             <h4>Breakout</h4>
             <p>Dirk Bruns</p>
-            <span class="date"><b>14:00 - 14:45 </b>| YouTube for Performance & Measurement Best Practices  </span>
+            <span class="date"><b>14:00 - 14:45 </b>| How to make branding measurable  </span>
           </div>
         </li>
            <li class="animated hiding" data-animation="fadeInRight">
