--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
             <li class="animated hiding" data-animation="fadeInLeft">
           <div class="timeline-panel left">
             <h4>Keynote</h4>
-            <p>tbd</p>
+            <p>Murtaza Lukmani</p>
             <span class="date">The Future of Attribution | <b>16:00 - 16:45</b></span>
           </div>
         </li>
@@ -550,7 +550,7 @@
           </li>
           <li class="animated hiding" data-animation="flipInX" data-delay="1000">
             <a href="#service3" data-toggle="tab">
-              <img src = "images/team/OliverBorm.jpg" class="img-circle" align="middle" width="100%">
+              <img src = "images/team/MatzLukmani.gif" class="img-circle" align="middle" width="100%">
             </a>            
           </li>
           <li class="animated hiding" data-animation="flipInX" data-delay="1500">
@@ -590,8 +590,8 @@
             <p>Head of Performance Sales, Central Europe <br />
           </div>
           <div class="tab-pane fade" id="service3">
-            <h3>Oliver Borm</h3>
-            <p>Advanced Performance Lead<br />	
+            <h3>Murtaza Lukmani</h3>
+            <p>EMEA Advanced Performance - Attribution Expert<br />	
           </div>
           <div class="tab-pane fade" id="service4">
             <h3>Miriam Tappe</h3>
