--- a/index.html
+++ b/index.html
@@ -560,7 +560,7 @@
           </li>
 	<li class="animated hiding" data-animation="flipInX" data-delay="2000">
             <a href="#service5" data-toggle="tab">
-              <img src = "images/team/JanWittek.jpg" class="img-circle" align="middle" width="100%">
+              <img src = "images/team/JanWittek.png" class="img-circle" align="middle" width="100%">
             </a>            
           </li>
 		<li class="animated hiding" data-animation="flipInX" data-delay="2500">
