--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
           <div class="timeline-panel right">
             <h4>Breakout</h4>
             <p>Jan Wittek</p>
-            <span class="date"><b> 15:15 - 16:00</b> | Google Analytics und Cross-Channel Attribution (incl. How to become Reseller)</span>
+            <span class="date"><b> 15:15 - 16:00</b> | Google Analytics 360 Suite and Cross-Channel Attribution (incl. How to become Reseller)</span>
           </div>
         </li>
            <li class="animated hiding" data-animation="fadeInRight">
