--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   <div id="home">
     <div class="banner">
       <div class="container">
-        <h2>Attribution Automation Analytics</h2>
+        <h2>Attribution Analytics Automation</h2>
 	      <img src="images/team/Triple-A-LOGO-standalone.png" width="15%" class="img"> <h1>Summit 2017</h1>
         <div id="home-slider" class="flexslider">
           <ul class="slides">
