--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
         </li>
             <li class="animated hiding" data-animation="fadeInLeft">
           <div class="timeline-panel left">
-            <h4>Session</h4>
-            <p>tbd</p>
+            <h4>Panel</h4>
+            <p>Moderator: Patrick Singer</p>
             <span class="date">Measurement & Attribution projects - how to tackle in different departments and with agencies | <b>13:15 - 14:00</b></span>
           </div>
         </li>
